service.yaml
# AUTOGENERATED FILE, DO NOT MODIFY
# SOURCE: cdk8s/src/apps/marci/rest.ts
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: default
spec:
  externalIPs: []
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: marci
  type: ClusterIP
